--- a/albums/templates/albums/albums_list.html
+++ b/albums/templates/albums/albums_list.html
@@ -1,59 +1,26 @@
 {% load static %}
-
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>Django Music App Project</title>
+        <title>Mara's Music App Project</title>
+        <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/albums.css' %}">
     </head>
-
-  <head>
-    <title> Mara's Django Music Collection</title>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
-    <link rel="stylesheet" href="{% static 'css/albums.css' %}">
-    <style type="text/css" media= "screen"</type>
-      ul {
-        list-style-image: url ("Bullet.png");
-        }
-    </style>
-  </head>
-  <body>
-    <h1> Mara's Favorite Songs</h1>
-
-    <ul>
-        <li> "Lullaby"  Disintegration(1989)   The Cure </li>
-        <li> "Believer"  Evolve(2017)  Imagine Dragons</li>
-        <li> "Flood Down in Texas" Texas Flood(1983) BB King & Stevie Ray Vaughn</li>
-        <li> "Hello"  25(2015)  Adele</li>
-        <li> "Deep River - Mountain High"  Proud Mary: The Best of Ike & Tina Turner (1991)  Tina Turner</li>
-        <li> "Burning Down the House"  Speaking in Tongues(1982)  Talking Heads </li>
-        <li> "Missionary Man"  Revenge(1986)  Eurythmics</li>
-        <li> "Low"  Mail on Sunday(2007) Flo Rida</li>
-        <li> "Set Fire to the Rain"  21(2011)  Adele </li> 
-    </ul>
-  </body>
-</html> 
-    
     <body>
-        <header>
-            <h1><a href="/">Albums! Albums! Albums!</a></h1>
+        <header class="page-header">
+          <div class="container">
+              <h1><a href="/">Albums! Albums! Albums! </a></h1>
+          </div>
         </header>
-        
-        {% for albums in album %}
-        <article>
-            <time>published: {{ albums.published_date }}</time>
-            <h2><a href="">{{ album.title }}</a></h2>
-            <p>{{ album.text|linebreaksbr }}</p>
-        </article>
-        {% endfor %}
-        <article>
-            
-            <time>published: 14.06.2014, 12:14</time>
-            <h2><a href="">Disintegration (1989)</a></h2>
-            <p> Artist: The Cure </p>
-            <h3><a href="">Evolve (2017)</a></h3>
-            <p> Artist: Imagine Dragons </p>
-            
-            
-        </article>
-    </body>
+        <main class="container">
+            <div class="row">
+                <div class="col">
+                {% block content %}
+                {% endblock %}
+                </div>
+           </div>
+       </main>
+   </body>
 </html>
