--- a/albums/templates/albums/icon/index.html
+++ b/albums/templates/albums/icon/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
        <meta charset = "utf-8">
@@ -8,8 +8,9 @@
     <body>
       <div class = "wrapper">
         <h1>Front page</h1>
-        <!-- #<img class= "img-musicbrain" src="img/musicbrain.jpg" alt="head with musicbrain"> -->
+        <img class= "img-musicbrain" src="img/musicbrain.jpg" alt="head with musicbrain">
+        <img src=
       <div class="img-musicbrain"></div>
     </div>
     </body>
-</html>
+</html> -->
