--- a/albums/static/css/album.css
+++ b/albums/static/css/album.css
@@ -1,14 +1,15 @@
-h1 a, h2 a {
+ h1 a, h2 a {
     color: #0400ff;
     font-family: 'Lobster';
 }
 
 body {
     padding-left: 15px;
+    color:#5dbbc2;
 }
 
 .page-header {
-    background-color: #2fc0ca;
+    background-color: #5dbbc2;
     margin-top: 0;
     margin-bottom: 40px;
     padding: 20px 20px 20px 40px;
@@ -58,7 +59,7 @@ h4 {
 
 .post h2 a,
 .post h2 a:visited {
-    color: #000000;
+    color: #10eff7;
 }
 
 .post > .date,
@@ -68,16 +69,49 @@ h4 {
 
 .btn-default,
 .btn-default:visited {
-    color: #C25100;
+    color: #3c0668;
     background: none;
-    border-color: #C25100;
+    border-color: #b200c2;
 }
 
 .btn-default:hover {
     color: #FFFFFF;
-    background-color: #C25100;
+    background-color: #00c21a;
 } 
 
 #favorite {
-    background-color: royalblue;
+    background-color: rgb(226, 250, 15); 
+}
+
+.nav_bar{
+    align-self: flex-start;
+    grid-column-start: span;
+    grid-area: nav_bar;
+    color: black;
+    background-color: white;
+    text-decoration: none;
+    text-align: right;
+    border-bottom: 20px solid #fff7ec;
+    margin-right: 20px;
+    margin-top: 10px;
+    padding: 10px 10px 10px 10px;
+    border: 2px solid black;
+}
+
+.side_bar {
+    margin-right: 20px;
+    font-family: 'papyrus', sans-serif; color:#000000;
+    font-size: 10pt; 
+    text-align: right;
+    padding: 10px 10px 10px 10px;
+    border-bottom: 20px solid #fff7ec;
+    margin-top: 10px;
+    background-color: white;
+    border: 2px solid black;
+
+
+}
+
+
+
 }
